--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "export": "next export",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
-    "test": "jest --watch",
+    "test": "jest",
     "cypress": "cypress open"
   },
   "dependencies": {
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.1",
     "@types/mui-image": "^1.0.1",
     "@types/node": "^18.14.6",
@@ -71,7 +72,9 @@
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.3",
     "jest": "^29.5.0",
+    "jest-canvas-mock": "^2.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "msw": "^1.2.1",
     "next-router-mock": "^0.9.3",
     "typescript": "^4.9.5"
   }
